Rename Project `min_hours_per_week` to `weekly_target`

--- a/app/views/projects/_form.haml
+++ b/app/views/projects/_form.haml
@@ -15,8 +15,8 @@
       %td= f.label :requires_daily_billing
       %td= f.check_box :requires_daily_billing, class: 'form-control'
     %tr
-      %td= f.label :min_hours_per_week
-      %td= f.text_field :min_hours_per_week, class: "form-control"
+      %td= f.label :weekly_target
+      %td= f.text_field :weekly_target, class: "form-control"
     %tr
       %td= f.label :active
       %td= f.check_box :active, class: 'form-control'
