--- a/app/views/work_entries/_new_timer.haml
+++ b/app/views/work_entries/_new_timer.haml
@@ -1,8 +1,8 @@
 = form_for current_user.work_entries.new do |f|
-  .nowrap{style: "padding-bottom: 10px;"}
+  %div{style: "padding-bottom: 10px;"}
     %strong New timer:
     &nbsp;
-    = f.select :project_id, project_options_for_select(exclude_inactive: true, selected_id: current_user.last_project.try(:id)), {}, class: "form-control", style: "display: inline-block; width: 250px;"
+    = f.select :project_id, project_options_for_select(exclude_inactive: true, selected_id: current_user.last_project.try(:id)), {}, class: "form-control", style: "display: inline-block; width: 200px;"
     &nbsp;
     = f.text_field :invoice_notes, class: "form-control inline", placeholder: "Whatcha workin on?", style: "width: 250px;"
     &nbsp;
