Fix error when filtering (due to totals display)

--- a/app/views/work_entries/_totals.haml
+++ b/app/views/work_entries/_totals.haml
@@ -6,8 +6,8 @@
       %td.text-right Billable
     %tr
       %td
-      %th.text-right= @filter_totals[:filtered][:total].round(1)
-      %th.text-right= @filter_totals[:filtered][:billable].round(1)
+      %th.text-right= @filter_totals[:total].round(1)
+      %th.text-right= @filter_totals[:billable].round(1)
 - else
   %table.totals-table
     %tr
