--- a/app/views/work_entries/edit.haml
+++ b/app/views/work_entries/edit.haml
@@ -25,10 +25,10 @@
           = f.label :invoice_notes, "Invoice notes"
           .small{style: "margin-top: -5px;"}
             (what did you do?)
-        %td= f.text_field :invoice_notes, class: "form-control"
+        %td= f.text_area :invoice_notes, class: "form-control"
       %tr
         %td.text-warning= f.label :admin_notes, "Private notes"
-        %td= f.text_field :admin_notes, class: "form-control"
+        %td= f.text_area :admin_notes, class: "form-control"
       - if @entry.project.billable?
         %tr
           %td= f.label :exclude_from_invoice, "Exclude from invoice"
